<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView11" xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="wrap_content" android:layout_height="wrap_content">

	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
		
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="32dp"
	        android:text="@string/freq"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Spinner
	    	android:id="@+id/spFreq"
	    	android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView1"
	        android:layout_toRightOf="@+id/textView1"
	        android:layout_marginLeft="10dp"
	        android:dropDownSelector="@array/frequencylist" />
	    
	    <Spinner
	    	android:id="@+id/spTime"
	    	android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView1"
	        android:layout_alignParentRight="true"
	        android:layout_alignRight="@+id/spFreq"
	        android:layout_marginRight="10dp" />
		
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView1"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="20dp"
	        android:text="@string/protocol"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Spinner
	    	android:id="@+id/spProtocol"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView5"
	        android:layout_alignLeft="@+id/spFreq"
	        android:layout_toRightOf="@+id/textView5"
	        android:dropDownSelector="@array/protocollist" />
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView5"
	        android:layout_below="@+id/textView5"
	        android:layout_marginTop="20dp"
	        android:text="@string/host"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/txtHost"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignBaseline="@+id/textView2"
	       	android:layout_alignRight="@+id/textView2"
	       	android:layout_alignLeft="@+id/spProtocol"
	        android:layout_marginRight="10dp"
	        android:ems="10"
	        android:inputType="text" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_below="@+id/textView2"
	        android:layout_marginTop="20dp"
	        android:text="@string/port"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/txtPort"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignBaseline="@+id/textView3"
	       	android:layout_alignRight="@+id/textView3"
	       	android:layout_alignLeft="@+id/txtHost"
	        android:layout_marginRight="10dp"
	        android:ems="10"
	        android:inputType="numberSigned"
	        android:text="@string/portval" />
	    
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView3"
	        android:layout_below="@+id/textView3"
	        android:layout_marginTop="20dp"
	        android:text="@string/location"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/txtLocation"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignBaseline="@+id/textView4"
	       	android:layout_alignRight="@+id/textView4"
	       	android:layout_alignLeft="@+id/txtPort"
	        android:layout_marginRight="10dp"
	        android:ems="10"
	        android:inputType="text" />
	    
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView4"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="20dp"
	        android:text="@string/destination"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Spinner
	    	android:id="@+id/spDestination"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView6"
	        android:layout_toRightOf="@+id/textView6"
	        android:layout_alignLeft="@+id/txtLocation"
	        android:dropDownSelector="@array/protocollist" />
	    
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView6"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="20dp"
	        android:text="@string/resolution"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Spinner
	    	android:id="@+id/spResolution"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView7"
	        android:layout_toRightOf="@+id/textView7"
	        android:layout_alignLeft="@+id/txtLocation"
	        android:dropDownSelector="@array/picturesize" />
	
	    <Button
	        android:id="@+id/btnFreq"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/spDestination"
	        android:layout_below="@+id/spResolution"
	        android:layout_marginRight="80dp"
	        android:layout_marginTop="300dp"
	        android:text="@string/freqbtn" />
	
	</RelativeLayout>
</ScrollView>